--- a/about/index.html
+++ b/about/index.html
@@ -21,10 +21,36 @@
     </header>
 
     <main class="main">
-      <h2>About</h2>
-<p>Este sitio es un archivo personal.</p>
-<p>No usa base de datos.</p>
-<p>No tiene comentarios en tiempo real.</p>
+      <p>
+    Si quieres saber que mas hago ademas de pensar y escribir cosas puedes seguirme por aqui.
+</p>
+<div class="about-cards">
+  <div class="card">
+    <h4>Dev</h4>
+    <p>Desarrollo. Proyectos personales. Muchos prototipos</p>
+    <div class="links">
+      <a href="https://github.com/jromano743" target="_blank">GitHub</a>
+      <a href="https://elsempp.itch.io/" target="_blank">Itch</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <h4>Social media</h4>
+    <p>Solo escribo en X. Porque perdí la vieja cuenta :c</p>
+    <div class="links">
+      <a href="https://x.com/elsempp" target="_blank">X (Twiter)</a>
+    </div>
+  </div>
+
+  <div class="card">
+    <h4>Youtube - Streamer</h4>
+    <p>Cosas que haré algun dia. Puede ser... quiza... nose!</p>
+    <div class="links">
+      <a href="https://youtu.be/xvFZjo5PgG0" target="_blank">Youtube</a>
+      <a href="https://youtu.be/xvFZjo5PgG0" target="_blank">Twitch</a>
+    </div>
+  </div>
+</div>
 
     </main>
 
