--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ title: Inicio
     <!-- IMAGEN ARRIBA -->
     <div class="img-frame" style="text-align: center;">
       <img
-        src="{{ '/assets/images/index/avatar.png' | relative_url }}"
+        src="{{ '/assets/images/index/avatar.webp' | relative_url }}"
         alt="Avatar"
         style="width: 100%; max-width: 250px; border: 2px solid #9d7cff; box-shadow: 0 0 25px rgba(157,124,255,.4); border-radius: 8px;">
       <span style="display: block; margin-top: 0.5rem; font-size: 0.75rem; color: #ffeb3b; letter-spacing: 0.15em;">
