New post - Naruto

--- a/techie/index.html
+++ b/techie/index.html
@@ -3,7 +3,46 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lobby Lab</title>
+
+  <title>
+    
+      Lobby Lab · Techie
+    
+  </title>
+
+  <!-- Open Graph -->
+<meta property="og:type" content="article">
+<meta property="og:site_name" content="Lobby Lab">
+
+<meta property="og:title"
+      content="Techie">
+
+<meta property="og:url"
+      content="http://0.0.0.0:4000/techie/">
+
+<meta property="og:description"
+      content="
+                Un sitio personal con estética del 2001
+              ">
+
+<meta property="og:image"
+      content="http://0.0.0.0:4000/jromano743/assets/images/default_cover.webp">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+
+<meta name="twitter:title"
+      content="Techie">
+
+<meta name="twitter:description"
+      content="
+                Un sitio personal con estética del 2001
+              ">
+
+<meta name="twitter:image"
+      content="http://0.0.0.0:4000/assets/images/default_cover.webp">
+
+
   <link rel="stylesheet" href="/jromano743/assets/style.css">
 </head>
 
