--- a/index.html
+++ b/index.html
@@ -3,7 +3,46 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lobby Lab</title>
+
+  <title>
+    
+      Lobby Lab · Inicio
+    
+  </title>
+
+  <!-- Open Graph -->
+<meta property="og:type" content="article">
+<meta property="og:site_name" content="Lobby Lab">
+
+<meta property="og:title"
+      content="Inicio">
+
+<meta property="og:url"
+      content="http://0.0.0.0:4000/">
+
+<meta property="og:description"
+      content="
+                Un sitio personal con estética del 2001
+              ">
+
+<meta property="og:image"
+      content="http://0.0.0.0:4000/jromano743/assets/images/default_cover.webp">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+
+<meta name="twitter:title"
+      content="Inicio">
+
+<meta name="twitter:description"
+      content="
+                Un sitio personal con estética del 2001
+              ">
+
+<meta name="twitter:image"
+      content="http://0.0.0.0:4000/assets/images/default_cover.webp">
+
+
   <link rel="stylesheet" href="/jromano743/assets/style.css">
 </head>
 
@@ -62,7 +101,7 @@
     <!-- IMAGEN ARRIBA -->
     <div class="img-frame" style="text-align: center;">
       <img
-        src="/jromano743/assets/images/index/avatar.png"
+        src="/jromano743/assets/images/index/avatar.webp"
         alt="Avatar"
         style="width: 100%; max-width: 250px; border: 2px solid #9d7cff; box-shadow: 0 0 25px rgba(157,124,255,.4); border-radius: 8px;">
       <span style="display: block; margin-top: 0.5rem; font-size: 0.75rem; color: #ffeb3b; letter-spacing: 0.15em;">
