--- a/geek/index.html
+++ b/geek/index.html
@@ -18,7 +18,7 @@
       content="Gamer">
 
 <meta property="og:url"
-      content="http://0.0.0.0:4000/geek/">
+      content="https://jromano743.github.io/jromano743/geek/">
 
 <meta property="og:description"
       content="
@@ -26,7 +26,7 @@
               ">
 
 <meta property="og:image"
-      content="http://0.0.0.0:4000/jromano743/assets/images/default_cover.webp">
+      content="https://jromano743.github.io/jromano743/assets/images/default_cover.webp">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
@@ -40,7 +40,7 @@
               ">
 
 <meta name="twitter:image"
-      content="http://0.0.0.0:4000/assets/images/default_cover.webp">
+      content="https://jromano743.github.io/jromano743/assets/images/default_cover.webp">
 
 
   <link rel="stylesheet" href="/jromano743/assets/style.css">
